# tgdb

./: .gitignore  CMakeLists.txt  README.md  init
config/: generate.py
environment/os/: ubuntu-22.04.sh
src/: CMakeLists.txt  helpers.hpp  memgraph.cpp
src/kvstore/: CMakeLists.txt  kvstore.cpp  rocksdb_service.pb.cc  rocksdb_service.pb.h  rpc_kvstore.cpp  rpc_kvstore.hpp
src/query/: CMakeLists.txt  cypher_query_interpreter.cpp  db_accessor.hpp  interpreter.cpp
src/query/frontend/ast/: ast.lcp.cpp
src/query/frontend/opencypher/grammar/: MemgraphCypher.g4  MemgraphCypherLexer.g4
src/query/frontend/semantic/: symbol.lcp.cpp
src/query/plan/: operator.cpp  operator.hpp  operator.lcp.cpp  variable_start_planner.cpp
src/query/plan/rewrite/: index_lookup.cpp
src/requests/: requests.cpp
src/storage/v2/: CMakeLists.txt  historical_delta_help.hpp  history_delta.cpp  history_delta.hpp  rocksdb_service.pb.h  storage.cpp  storage.hpp
src/storage/v2/replication/: rpc.lcp.cpp
src/telemetry/: system_info.cpp
tests/: setup.sh
tests/experiments-cloud/ldbc/: dataset.sh
tests/experiments-cloud/ldbc/cloud/: evalute.sh  start.sh
tests/experiments-cloud/ldbc/db/: evalute.sh  start.sh
tests/experiments-cloud/mgbench/: t_ldbc_dataset.sh  t_ldbc_dataset_cloud.sh  t_mgBench_test.sh
tests/experiments-cloud/mgbench/cloud/: evalute.sh  start.sh
tests/experiments-cloud/mgbench/db/: evalute.sh  start.sh
tests/mgbench/: client.cpp
tests/scripts/: create_temporal_database.py  evaluate_temporal_q.py
